white added to palette

--- a/assets/css/bem-css.scss
+++ b/assets/css/bem-css.scss
@@ -24,6 +24,8 @@ $grey-light: #95a5a6;
 $grey-dark: #7f8c8d;
 $black-light: #4b4b4b;
 $black-dark: #3d3d3d;
+$white-light: #fff;
+$white-dark: #e2e2e2;
 
 //stylesheet
     //typography
