--- a/assets/css/bem-css.scss
+++ b/assets/css/bem-css.scss
@@ -68,6 +68,94 @@ p {
     font-family: $font-text;
 }
 
+//buttons
+.button {
+    display: inline-block;
+    height: calc(35px + 0.5vw);
+    padding: 0 20px;
+    font-family: $font-header;
+    font-weight: 600;
+    letter-spacing: 0.1rem;
+    font-size: calc(0.8em + 0.2vw);
+    color: #eee;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
+}
+
+.button--blue {
+    background-color: $blue-light;
+}
+
+.button--blue:hover {
+    background-color: $blue-dark;
+}
+
+.button--green {
+    background-color: $green-light;
+}
+
+.button--green:hover {
+    background-color: $green-dark;
+}
+
+.button--mint {
+    background-color: $mint-light;
+}
+
+.button--mint:hover {
+    background-color: $mint-dark;
+}
+
+.button--orange {
+    background-color: $orange-light;
+}
+
+.button--orange:hover {
+    background-color: $orange-dark;
+}
+
+.button--red {
+    background-color: $red-light;
+}
+
+.button--red:hover {
+    background-color: $red-dark;
+}
+
+.button--purple {
+    background-color: $purple-light;
+}
+
+.button--purple:hover {
+    background-color: $purple-dark;
+}
+
+.button--grey {
+    background-color: $grey-light;
+}
+
+.button--grey:hover {
+    background-color: $grey-dark;
+}
+
+.button--black {
+    background-color: $black-light;
+}
+
+.button--black:hover {
+    background-color: $black-dark;
+}
+
+.button--white {
+    background-color: $white-light;
+    color: $text-dark;
+}
+
+.button--white:hover {
+    background-color: $white-dark;
+}
+
 // media queries
 @media all and (min-width: 1280px) {
 
@@ -86,5 +174,6 @@ p {
 }
 
 @media all and (max-width: 480px) {
-
+    display: block;
+    margin:0.4em auto;
 }
