title fix and comment info

--- a/assets/css/bem-css.css
+++ b/assets/css/bem-css.css
@@ -1,3 +1,7 @@
+/*
+ * BEM-CSS v1.0 (https://github.com/3daddict/bem-css)
+ * Licensed under MIT
+ */
 @import url("https://fonts.googleapis.com/css?family=Lato:300");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
 h1,
