sass skeleton created

--- a/assets/css/bem-css.scss
+++ b/assets/css/bem-css.scss
@@ -161,6 +161,34 @@ p {
     background-color: $white-dark;
 }
 
+//cards
+.card {
+
+}
+
+.card__image-container {
+
+}
+.card__image {
+    
+}
+
+.card__content {
+
+}
+
+.card__content-container {
+
+}
+
+.card__title {
+
+}
+
+.card__text {
+    
+}
+
 // media queries
 @media all and (min-width: 1280px) {
 
