--- a/assets/css/bem-css.css
+++ b/assets/css/bem-css.css
@@ -131,6 +131,27 @@ p {
   background-color: #e2e2e2;
 }
 
+.card {
+  position: relative;
+  max-width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
+          box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
+}
+
+.card__image-container {
+  display: block;
+}
+
+.card__image {
+  margin: 0;
+  padding: 0;
+}
+
+.card__content {
+  padding: 1.5rem;
+}
+
 @media all and (max-width: 480px) {
   display: block;
   margin: 0.4em auto;
