--- a/assets/css/bem-css.scss
+++ b/assets/css/bem-css.scss
@@ -163,18 +163,22 @@ p {
 
 //cards
 .card {
-
+    position: relative;
+    max-width: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.06) ;
 }
 
 .card__image-container {
-
+    display: block;
 }
 .card__image {
-    
+    margin: 0;
+    padding: 0;
 }
 
 .card__content {
-
+    padding: 1.5rem;
 }
 
 .card__content-container {
@@ -186,7 +190,7 @@ p {
 }
 
 .card__text {
-    
+
 }
 
 // media queries
