--- a/assets/css/bem-css.scss
+++ b/assets/css/bem-css.scss
@@ -82,7 +82,7 @@ p {
     font-weight: 600;
     letter-spacing: 0.1rem;
     font-size: calc(0.8em + 0.2vw);
-    color: #eee;
+    color: #fff;
     border: none;
     border-radius: 3px;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
@@ -164,53 +164,56 @@ p {
 //cards
 .card {
     position: relative;
-    max-width: 100%;
+    margin: auto;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
+    margin-bottom: 10px;
+}
+
+.card-dark {
+    position: relative;
+    margin: auto;
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.06) ;
+    background-color: $black-dark;
+    margin-bottom: 10px;
+        h5, p {
+            color: $text-light;
+        }
+
 }
 
 .card__image-container {
-    display: block;
+    max-width: 100%;
 }
+
 .card__image {
     margin: 0;
     padding: 0;
 }
 
+.card__image img {
+    width: 100%;
+    display: block;
+}
+
 .card__content {
-    padding: 1.5rem;
+    padding: 1.0rem 1.5rem 1.5rem 1.5rem;
 }
 
 .card__content-container {
-
+        //Custom code here
+    button {
+        display: block;
+        margin-left: auto;
+        margin-right: 0;
+    }
 }
 
 .card__title {
-
+    font-weight: 100;
 }
 
 .card__text {
-
-}
-
-// media queries
-@media all and (min-width: 1280px) {
-
-}
-
-@media all and (min-width: 1024px) and (max-width: 1280px) {
-
-}
-
-@media all and (min-width: 768px) and (max-width: 1024px) {
-
-}
-
-@media all and (min-width: 480px) and (max-width: 768px) {
-
-}
-
-@media all and (max-width: 480px) {
-    display: block;
-    margin:0.4em auto;
+    //Custom code here
 }
