basic grid sections created

--- a/assets/css/bem-css.scss
+++ b/assets/css/bem-css.scss
@@ -73,6 +73,55 @@ p {
     font-family: $font-text;
 }
 
+//grid
+.grid-1 {
+    width: 8%;
+}
+
+.grid-2 {
+    width: 17%;
+}
+
+.grid-3 {
+    width: 25%;
+}
+
+.grid-4 {
+    width: 33%;
+}
+
+.grid-5 {
+    width: 42%;
+}
+
+.grid-6 {
+    width: 50%;
+}
+
+.grid-7 {
+    width: 58%;
+}
+
+.grid-8 {
+    width: 67%;
+}
+
+.grid-9 {
+    width: 75%;
+}
+
+.grid-10 {
+    width: 83%;
+}
+
+.grid-11 {
+    width: 92%;
+}
+
+.grid-12 {
+    width: 100%;
+}
+
 //buttons
 .button {
     display: inline-block;
